issue#95 Edited ProductDetailAddtoCart.vue: fixed jumping cart-icon by adding class to loader, to hide in small cart-button

--- a/@hubblecommerce/hubble/core/assets/scss/hubble/components/view-product.scss
+++ b/@hubblecommerce/hubble/core/assets/scss/hubble/components/view-product.scss
@@ -46,6 +46,10 @@
                     overflow: hidden;
                     display: block;
                 }
+
+                .hidden-loader{
+                    display: none;
+                }
             }
         }
     }
